src/test/ui/borrowck/borrowck-block-unint.stderr
error[E0381]: capture of possibly uninitialized variable: `x`
  --> $DIR/borrowck-block-unint.rs:4:11
   |
LL |     force(|| {  //~ ERROR capture of possibly uninitialized variable: `x`
   |           ^^ use of possibly uninitialized `x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
